@@ -1,4 +1,6 @@
 ### 3.4.1 (Released 20XX-XX-XX) ###
+- Handle searching on repetitions where submitted search field contains an
+  index.
 
 ### 3.4.0 (Released 2015-05-07) ###
 - Experimental PDO: MySQL improvements.
